--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "cookie": "^0.6.0",
     "cookie-parser": "^1.4.6",
     "cookie-signature": "^1.0.6",
+    "cors": "^2.8.5",
     "debug": "^2.6.9",
     "define-data-property": "^1.1.4",
     "depd": "^2.0.0",
@@ -86,6 +87,7 @@
     "setprototypeof": "^1.2.0",
     "side-channel": "^1.0.6",
     "sift": "^17.1.3",
+    "socket.io": "^4.8.1",
     "sparse-bitfield": "^3.0.3",
     "statuses": "^2.0.1",
     "supports-color": "^7.2.0",
